--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -1,7 +1,7 @@
 format:
-  html: {toc: true, toc-depth: 4, theme: spacelab}
+  html: {toc: true, toc-depth: 4, theme: cosmo}
   revealjs: {theme: solarized, navigation-mode: vertical, transition: slide, background-transition: fade, incremental: true}
 project: {type: book}
 book:
   title: Python Data Science Handbook - in Clojure
-  chapters: [index.qmd, scicloj.handbook.05_06_linear_regression.qmd]
+  chapters: [index.qmd, pdshic.05_06_linear_regression.qmd]
